--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,3 +15,15 @@
 - name: install rkt
   yum:
     name: https://github.com/rkt/rkt/releases/download/{{rkt.rpm_version}}/{{rkt.rpm}}
+  when: ansible_distribution == "CentOS"
+
+- name: create {{ service_name }} job
+  template: src=rkt_runner.service.j2 dest=/etc/systemd/system/{{ service_name }}.service
+  register: install_config
+
+- name: notify systemd of config changes
+  command: systemctl daemon-reload
+  when: install_config.changed == True
+
+- name: start {{ service_name }} and set to start on startup
+  service: name={{ service_name }} state=started enabled=yes
